# ACC

./: .gitignore  CMakeLists.txt  README.md  build.sh  qt.sh  run.sh  test.c
RaspberryDemo/: BottunIndic.qml  CalibrationTab.qml  ContinousLogging.qml  DEV_Config.h  FloatKeyboard.qml  Images.qrc  KeboardPopup.qml  NumIndic.qml  ParameterTab.qml  PushBottun.qml  RaspberryDemo.pro  acc_relay.h  ad7175_2_regs.h  ad717x.c  ad717x.h  ad7706brz.h  ad770x.h  ad9833.c  ad9833.h  ad9833_test.h  bcm2835.h  bridge.cpp  bridge.h  file_gpio.h  file_manager.cpp  file_manager.h  main.cpp  main.qml  main_adc.c  main_adc.h  max31865.h  pigpio.cpp  pigpio.h  qml.qrc  setting.h  spidev_lib.c  spidev_lib.h  worker.cpp  worker.h
RaspberryDemo/include/: DEV_Config.h  ad7175_2_regs.h  ad717x.h  ad7706brz.h  ad9833.h  ad9833_test.h  setings.h
RaspberryDemo/src/: DEV_Config.c  ad7706brz.c  ad770x.c  ad9833.c  ad9833_test.c  bcm2835.c  file_gpio.c  max31865.c
etc/samba/: smb.conf
include/: AD770X.h  ADS1256.h  DEV_Config.h  ad717x.h  ad7706brz.h  ad9833.h  ad9833_test.h  max31865.h  setings.h  spidev_lib.h  sysfs_gpio.h
src/: AD770x.c  ADS1256.c  DEV_Config.c  ad717x.c  ad7706brz.c  ad9833.c  ad9833_test.c  bcm2835.c  main.c  max31865.c  spidev_lib.c  sysfs_gpio.c
systemd/: wsdd.service
